# testcontainers-salt-poc

./: .gitignore  pyproject.toml
testcontainers_salt/: __init__.py
testcontainers_salt/resources/: Dockerfile  Dockerfile.ubuntu  minion.config
tests/: test_example_stack.py
tests/resources/salt_files/: README.md
tests/resources/salt_files/pillar/base/: pillar_test.sls  top.sls
tests/resources/salt_files/salt/base/: state_test.sls  top.sls
